syntax = "proto3";

package pagination;

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/duolacloud/microbase/proto/pagination;pagination";

enum OrderDirection {
  ASC = 0;
  DESC = 1;
}

message Order {
  string field = 1;
  OrderDirection direction = 2;
}

message PageInfo {
  int64 total = 1;
  bool hasNext = 2;
  bool hasPrevious = 3;
  string startCursor = 4;
  string endCursor = 5;
}

message ConnectionQuery {
  google.protobuf.Int32Value first = 2;
  google.protobuf.Int32Value last = 4;
  google.protobuf.StringValue after = 6;
  google.protobuf.StringValue before = 8;
  bool needTotal = 9;
  repeated string fields = 10;
  string filter = 11;
  repeated Order orders = 12;
}

message Connection {
  PageInfo pageInfo  = 1;
  int64 total = 2;
  repeated Edge edges = 3;
}

message Edge {
  google.protobuf.Any node = 1;
  string cursor = 2;
}


enum CursorDirection {
  before = 0;
  after = 1;
}

message PageQuery {
  int64 page_no = 1;
  int32 page_size = 2;
  string filter = 3;
  repeated Order orders = 4;
  repeated string fields = 5;
}

// 游标查询
message ListQuery {
  CursorDirection direction = 1;
  string filter = 2;
  int32 size = 3;
  string cursor = 4;
  bool needTotal = 5;
  repeated Order orders = 6;
  repeated string fields = 7;
}

message ListResponse {
  repeated google.protobuf.Any items = 1;
  PageInfo pageInfo = 2;
}